# CodeSandbox

./: CMakeLists.txt  CODESANDBOX_BEGINNER_GUIDE.md  CODESANDBOX_DESIGN.md  CODESANDBOX_TESTPLAN.md  ProcessUtils.cpp  ProcessUtils.hpp  README.md  SandboxTestMain.cpp  openCgroups.md
languageRunners/: CppRunner.cpp
sandboxRuntime/: CgroupManager.cpp  CgroupManager.hpp  SandboxRuntime.cpp
scheduler/: CompileQueue.cpp  CompileQueue.hpp  RunQueue.cpp  RunQueue.hpp  TaskManager.cpp  TaskManager.hpp
service/: SandboxService.cpp  SandboxService.hpp
workerPools/: CompilerPool.cpp  SandboxPool.cpp  SandboxWorkerPool.cpp
